Fix config swagger and refactor aplications config